--- a/index.css
+++ b/index.css
@@ -712,6 +712,10 @@
 		right: 24px;
 		margin-inline-start: 24px;
 
+		&.column {
+			align-items: end;
+		}
+
 		.notification {
 			max-width: 360px;
 			padding-block: 10px;
